--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,9 @@
         }
       ]
     }
-  ]
+  ],
+  "static": {
+    "source": "/.well-known/apple-app-site-association",
+    "destination": "/.well-known/apple-app-site-association"
+  }
 }
