--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,5 @@
       ]
     }
   ],
-  "static": {
-    "source": "/.well-known/apple-app-site-association",
-    "destination": "/.well-known/apple-app-site-association"
-  }
+  "cleanUrls": true
 }
