--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,12 @@
         {
           "key": "Content-Type",
           "value": "application/json"
+        },
+        {
+          "key": "Content-Disposition",
+          "value": "inline"
         }
       ]
     }
-  ],
-  "cleanUrls": true
+  ]
 }
